# geo-jobs-refactor

./: README.md  format.sh  main.py  pyproject.toml
.github/workflows/: format.yml
src/: clone_environment.py  rename_environment.py
src/cli/: __init__.py
src/template/: blueprints.py  template.py
