[project]
name = "geo-jobs-refactor"
version = "0.1.0"
description = "Refactoring Tool For b-partners/geo-jobs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.14.3",
    "uv>=0.9.7",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C"]  # types de règles à appliquer
lint.ignore = ["E501"]               # exemple : ignorer les lignes trop longues
exclude = ["venv", "build", ".venv", "src/template/blueprints.py"]     # dossiers à ignorer

